fixed space between main copy and menu. Aligned map next to contacts addresses

--- a/content/themes/digitalhub/style.css
+++ b/content/themes/digitalhub/style.css
@@ -1932,7 +1932,7 @@ text-align: center;
   width:100%;
   max-width:300px;
   height:100%;
-  float:right;
+  float:left;
 }
 
 .contact-wrap-inside{
@@ -1949,19 +1949,24 @@ text-align: center;
   padding-left:14.5px;
 }
 
-.contact-address, .contact-map{ width:50%;float:left;}
+.contact-address{ width:30%;float:left; padding-right:10px;}
 
-@media screen and (max-width: 1024px) {
+.contact-map{ width:70%;float:left;}
+
+@media screen and (max-width: 900px) {
 
 .contact-wrap-inside{
   width:100%;
   padding-left:0;
   padding-right:0;
+  margin-bottom:20px;
 }
 
 .contact-wrap > .last{
   padding-left:0px;
 }
+
+.contact-map img{float:right;}
 
 }
 
